--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
   <body>
     <h1>Simon Says Game</h1>
     <h2>Press any key to start</h2>
+    
     <div class="btn-container">
-      <div class="btn">1</div>
-      <div class="btn">2</div>
-      <div class="btn">3</div>
-      <div class="btn">4</div>
+
+      <div class="line-one">
+        <div class="btn">1</div>
+        <div class="btn">2</div>
+      </div>
+
+      <div class="line-two">
+        <div class="btn">3</div>
+        <div class="btn">4</div>
+      </div>
+
     </div>
 
     <script src="app.js"></script>
