--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <body>
     <h1>Simon Says Game</h1>
     <h2>Press any key to start</h2>
-    
+
     <div class="btn-container">
 
       <div class="line-one">
-        <div class="btn">1</div>
-        <div class="btn">2</div>
+        <div class="btn red">1</div>
+        <div class="btn green">2</div>
       </div>
 
       <div class="line-two">
-        <div class="btn">3</div>
-        <div class="btn">4</div>
+        <div class="btn yellow">3</div>
+        <div class="btn blue">4</div>
       </div>
 
     </div>
