--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="btn-container">
 
       <div class="line-one">
-        <div class="btn red">1</div>
-        <div class="btn green">2</div>
+        <div class="btn red" type="button">1</div>
+        <div class="btn green" type="button">2</div>
       </div>
 
       <div class="line-two">
-        <div class="btn yellow">3</div>
-        <div class="btn blue">4</div>
+        <div class="btn yellow" type="button">3</div>
+        <div class="btn blue" type="button">4</div>
       </div>
 
     </div>
