--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="btn-container">
 
       <div class="line-one">
-        <div class="btn red" type="button">1</div>
-        <div class="btn green" type="button">2</div>
+        <div class="btn red" type="button" id="red">1</div>
+        <div class="btn green" type="button" id="green">2</div>
       </div>
 
       <div class="line-two">
-        <div class="btn yellow" type="button">3</div>
-        <div class="btn blue" type="button">4</div>
+        <div class="btn yellow" type="button" id="yellow">3</div>
+        <div class="btn blue" type="button" id="blue">4</div>
       </div>
 
     </div>
