--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <h1>Simon Says Game</h1>
-    <h2>Press any key to start</h2>
-
+    <h2>Press ENTER to start </h2>
+    <p>High Score: 0</p>
     <div class="btn-container">
 
       <div class="line-one">
@@ -24,6 +24,8 @@
       </div>
 
     </div>
+
+    <p>made by: sachinandan</p>
 
     <script src="app.js"></script>
   </body>
